Create Base Styles and Structure

--- a/index.html
+++ b/index.html
@@ -4,11 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My landing page</title>
-    <!-- CHANGE THESE VALUES -->
+
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- ADD YOUR CODE HERE -->
+  <header>
+    <div class="logo">
+      <img src="logo.png" alt="Drive Buddy Logo">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#description">Description</a></li>
+        <li><a href="#login">Login</a></li>
+        <li><a href="#signup">Sign Up</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="description">
+      <div class="content">
+        <h1>Find Your Drive Buddy</h1>
+        <p>To provide a unified transport system, Drive Buddy helps people group with someone heading to the same destination. By doing so, they pay less, easily reach their destination, and spend less time worrying about the ride.</p>
+      </div>
+    </section>
+
+    <section id="login">
+      <div class="content">
+        <h2>Login</h2>
+        <!-- Add your login form here -->
+      </div>
+    </section>
+
+    <section id="signup">
+      <div class="content">
+        <h2>Sign Up</h2>
+        <!-- Add your sign-up form here -->
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="content">
+      <p>&copy; 2024 Find Your Drive Buddy. All rights reserved.</p>
+    </div>
+  </footer>
   </body>
 </html>
