Change the structure and button style

--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#description">Description</a></li>
-        <li><a href="#login">Login</a></li>
-        <li><a href="#signup">Sign Up</a></li>
+        <li>
+          <a href="https://example.com" target="_blank">
+            <button class="button-1" type="button">Log in</button>
+          </a>
+        </li>
+        <li>
+          <a href="https://example.com" target="_blank">
+            <button class="button-1" type="button">Sign up</button>
+          </a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -27,20 +34,6 @@
       <div class="content">
         <h1>Find Your Drive Buddy</h1>
         <p>To provide a unified transport system, Drive Buddy helps people group with someone heading to the same destination. By doing so, they pay less, easily reach their destination, and spend less time worrying about the ride.</p>
-      </div>
-    </section>
-
-    <section id="login">
-      <div class="content">
-        <h2>Login</h2>
-        <!-- Add your login form here -->
-      </div>
-    </section>
-
-    <section id="signup">
-      <div class="content">
-        <h2>Sign Up</h2>
-        <!-- Add your sign-up form here -->
       </div>
     </section>
   </main>
