landing page init structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   </head>
   <body>
   <header>
@@ -32,8 +33,16 @@
   <main>
     <section id="description">
       <div class="content">
-        <h1>Find Your Drive Buddy</h1>
-        <p>To provide a unified transport system, Drive Buddy helps people group with someone heading to the same destination. By doing so, they pay less, easily reach their destination, and spend less time worrying about the ride.</p>
+        <div class="description-image">
+          <img src="car-intro.png" alt="Description Image">
+        </div>
+        <div class="description-text">
+          <h1>Find Your Drive Buddy</h1>
+          <br>
+          <p>Discover a new way to travel with Drive Buddy! We believe in creating a unified transport system that brings people together for shared journeys. By connecting individuals with similar destinations, we help them save money, reach their destinations effortlessly, and spend less time worrying about the ride.</p>
+          <p>Whether you're commuting to work, planning a weekend getaway, or embarking on a road trip, Drive Buddy is your companion for cost-effective and convenient travel. Say goodbye to the hassle of solo rides and hello to a community-driven approach to transportation.</p>
+          <p>Join us today and become part of a network of travelers who value efficiency, affordability, and the joy of sharing the journey. Find your Drive Buddy and embark on a smoother, more enjoyable travel experience!</p>
+        </div>
       </div>
     </section>
   </main>
