--- a/index.html
+++ b/index.html
@@ -1,56 +1,146 @@
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/html">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My landing page</title>
+<!DOCTYPE html>
+<html lang="en">
 
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-  </head>
-  <body>
-  <header>
-    <div class="logo">
-      <img src="logo.png" alt="Drive Buddy Logo">
-    </div>
-    <nav>
-      <ul>
-        <li>
-          <a href="https://example.com" target="_blank">
-            <button class="button-1" type="button">Log in</button>
-          </a>
-        </li>
-        <li>
-          <a href="https://example.com" target="_blank">
-            <button class="button-1" type="button">Sign up</button>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My landing page</title>
 
-  <main>
-    <section id="description">
-      <div class="content">
-        <div class="description-image">
-          <img src="car-intro.png" alt="Description Image">
-        </div>
-        <div class="description-text">
-          <h1>Find Your Drive Buddy</h1>
-          <br>
-          <p>Discover a new way to travel with Drive Buddy! We believe in creating a unified transport system that brings people together for shared journeys. By connecting individuals with similar destinations, we help them save money, reach their destinations effortlessly, and spend less time worrying about the ride.</p>
-          <p>Whether you're commuting to work, planning a weekend getaway, or embarking on a road trip, Drive Buddy is your companion for cost-effective and convenient travel. Say goodbye to the hassle of solo rides and hello to a community-driven approach to transportation.</p>
-          <p>Join us today and become part of a network of travelers who value efficiency, affordability, and the joy of sharing the journey. Find your Drive Buddy and embark on a smoother, more enjoyable travel experience!</p>
-        </div>
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+<header>
+  <div class="logo">
+    <img src="logo.png" alt="Drive Buddy Logo">
+  </div>
+  <nav class="navbar">
+    <ul>
+      <li>
+        <a href="https://example.com" target="_blank">
+          <button class="button-1" type="button">Sign up</button>
+        </a>
+      </li>
+      <li>
+        <a href="#about-section" target="_blank">
+          <button class="button-1" type="button">About</button>
+        </a>
+      </li>
+      <li>
+        <a href="#faq-section" target="_blank">
+          <button class="button-1" type="button">FAQ</button>
+        </a>
+      </li>
+      <li>
+        <a href="#contact-section" target="_blank">
+          <button class="button-1" type="button">Contact</button>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+<main>
+
+  <section id="about-section">
+    <div class="content about-content">
+      <div class="about-text">
+        <h1>Find Your Drive Buddy</h1>
+        <br>
+        <p>Discover a new way to travel with Drive Buddy! We believe in creating a unified transport
+          system that brings people together for shared journeys. By connecting individuals with similar
+          destinations, we help them save money, reach their destinations effortlessly, and spend less time
+          worrying about the ride.</p>
+        <p>Whether you're commuting to work, planning a weekend getaway, or embarking on a road trip, Drive
+          Buddy is your companion for cost-effective and convenient travel. Say goodbye to the hassle of solo
+          rides and hello to a community-driven approach to transportation.</p>
+        <p>Join us today and become part of a network of travelers who value efficiency, affordability, and
+          the joy of sharing the journey. Find your Drive Buddy and embark on a smoother, more enjoyable
+          travel experience!</p>
       </div>
-    </section>
-  </main>
-
-  <footer>
-    <div class="content">
-      <p>&copy; 2024 Find Your Drive Buddy. All rights reserved.</p>
+      <div class="about-image">
+        <img src="car-intro.png" alt="About Image">
+      </div>
     </div>
-  </footer>
-  </body>
+  </section>
+
+  <section id="faq-section">
+    <div class="content">
+      <h2>Frequently Asked Questions</h2>
+      <div class="faq-item">
+        <h3>Is Drive Buddy service secure?</h3>
+        <p>Yes, Drive Buddy takes security seriously. We employ advanced encryption and security measures
+          to ensure the safety of your data and transactions.</p>
+      </div>
+      <div class="faq-item">
+        <h3>How long do I have to wait for the availability of a car?</h3>
+        <p>The availability of cars depends on various factors, including your location and demand. Drive
+          Buddy aims to provide quick and efficient service, and you can check real-time availability on our
+          platform.</p>
+      </div>
+      <!-- Add more FAQ items as needed -->
+    </div>
+  </section>
+
+  <section id="contact-section">
+    <div class="content">
+      <h2>Contact Us</h2>
+      <p>Have a question or feedback? Reach out to us using the form below:</p>
+      <form action="#" method="post">
+        <!-- Add your contact form fields here -->
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+        <button class="button-1" type="submit">Submit</button>
+      </form>
+    </div>
+  </section>
+
+</main>
+
+<!--<footer>-->
+<!--  <div class="content">-->
+<!--    <p>&copy; 2024 Find Your Drive Buddy. All rights reserved.</p>-->
+<!--  </div>-->
+<!--</footer>-->
+
+<footer>
+  <div class="content">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Terms of Service</a></li>
+      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="#">FAQ</a></li>
+    </ul>
+    <p>&copy; 2024 Find Your Drive Buddy. All rights reserved.</p>
+  </div>
+</footer>
+
+<script>
+  // Smooth scrolling for anchor links
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+      e.preventDefault();
+
+      document.querySelector(this.getAttribute('href')).scrollIntoView({
+        behavior: 'smooth'
+      });
+    });
+  });
+</script>
+
+</body>
+
 </html>
