--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="logo.png" type="image/icon type">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -22,7 +23,7 @@
   <nav class="navbar">
     <ul>
       <li>
-        <a href="https://example.com" target="_blank">
+        <a href="signup.html" target="_blank">
           <button class="button-1" type="button">Sign up</button>
         </a>
       </li>
@@ -190,7 +191,7 @@
 <footer>
   <div class="content">
     <ul>
-      <li><a href="#">Sign Up</a></li>
+      <li><a href="signup.html">Sign Up</a></li>
       <li><a href="#about-section">About Us</a></li>
       <li><a href="#contact-section">Contact Us</a></li>
       <li><a href="#faq-section">FAQ</a></li>
@@ -200,7 +201,16 @@
     <p>&copy; 2024 Find Your Drive Buddy. All rights reserved.</p>
   </div>
 </footer>
-
+<div id="imageContainer">
+  <div id="fixedImage">
+      <img id="mascot-img" src="mascot.jpg" alt="Mascot Image">
+  </div>
+  <div id="welcomeText">Welcome my dear friend!</div>
+</div>
+<!--<div id="fixedImage" class="animate">-->
+<!--  <img id="mascot-img" src="mascot.jpg" alt="Mascot Image">-->
+<!--</div>-->
+<!--<div id="welcomeText">Welcome my dear friend!</div>-->
 <script>
   document.querySelectorAll('a[href^="#"]').forEach(anchor => {
     anchor.addEventListener('click', function (e) {
